# telegram-vision-bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: bot.py  config.py  gradio_ui.py  handlers.py  session_manager.py  vision_service.py
tests/: conftest.py  test_bot.py
