[project]
name = "telegram-vision-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "gradio>=6.9.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]
